Fix collapse icon not clickable

--- a/scss/controls/collapsable.scss
+++ b/scss/controls/collapsable.scss
@@ -50,6 +50,7 @@
         position: absolute;
         top: 8px;
         left: 10px;
+        z-index: -1;
 
         display: inline-block;
 
